OurTeam Component Overflow Solved

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,6 +6,7 @@
   font-size: 1.2rem;
   position: sticky;
   top: 0;
+  height: 80px;
   z-index: 999;
 }
 #dropdown-basic-button{
